--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,29 @@
   background-size: cover;
   color: aliceblue;
 }
+
+.about {
+  text-align: center;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
+  border-radius: inherit;
+  display: cover;
+  width: 100%;
+}
+
+.sr {
+  background: url("../image/backgrounds/s_image.jpg") no-repeat center
+    center/cover;
+  width: 100%;
+  height: 50vh;
+  background-size: cover;
+  color: aliceblue;
+  text-align: center;
+}
+
+.icon {
+color: black;
+
+
+}
+
