--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,55 @@
 .style {
   text-align: center;
-  background: url("../image/backgrounds/h_img.jpg") no-repeat center
-    center/cover;
+  background: url("../image/backgrounds/h_img.jpg") no-repeat;
   width: 100%;
   height: 100vh;
   background-size: cover;
   color: aliceblue;
+  position: center;
 }
 
 .about {
   text-align: center;
-  padding: 1rem 1rem;
-  margin-bottom: 1rem;
+  padding: 3%;
+  margin: auto;
   border-radius: inherit;
   display: cover;
   width: 100%;
 }
 
 .sr {
-  background: url("../image/backgrounds/s_image.jpg") no-repeat center
-    center/cover;
-  width: 100%;
+  background: url("../image/backgrounds/s_image.jpg") no-repeat;
+  border: 100%;
   height: 50vh;
   background-size: cover;
   color: aliceblue;
   text-align: center;
+  position: center;
+  padding-top: 8%;
+  margin-bottom: 10%;
 }
 
 .icon {
-color: black;
-
-
+  text-align: center;
+  margin-bottom: 5%;
+}
+.portfolio {
+  text-align: center;
+  padding-top: 2%;
+}
+.ct {
+  background: url("../image/backgrounds/c_image.jpg") no-repeat;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  color: aliceblue;
 }
 
+/*.jumbotron {
+  border-radius: 0;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  margin-right: 0;
+}
