--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .style {
   text-align: center;
-  background: url(") no-repeat;
+  background: url("../image/backgrounds/h_img.jpg") no-repeat;
   width: 100%;
   height: 100vh;
   background-size: cover;
