--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,14 @@
   text-align: center;
   position: center;
   padding-top: 8%;
-  margin-bottom: 10%;
+
 }
 
 .icon {
   text-align: center;
-  margin-bottom: 5%;
+}
+.icon h2 {
+  padding-top: 30px;
 }
 .portfolio {
   text-align: center;
