--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@
   color: aliceblue;
   position: center;
 }
-
+.welcome {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .about {
   text-align: center;
   padding: 3%;
