--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@
   display: cover;
   width: 100%;
 }
-
 .sr {
   background: url("../image/backgrounds/s_image.jpg") no-repeat;
   border: 100%;
@@ -42,14 +41,24 @@
 }
 .mytext {
   position: absolute;
-  padding: 4%;
-  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   text-align: center;
-  top: 40%;
-  left: 40%;
-  transform: translate(-25%, -45%);
   display: none;
+  background-color: rgba(0, 0, 0, 0.6);
+  border: solid 2px #ffffff;
+  opacity: .5;
+  color:#ffffff;
+  width:90%;
+  height:90%;
 }
+.mytext p {
+  color:white;
+
+}
+
 .icon {
   text-align: center;
 }
@@ -67,7 +76,6 @@
   height: 100vh;
   color: white;
 }
-
 .cc {
   margin-left: 0%;
   margin-right: 3%;
@@ -101,3 +109,7 @@
 .ct h2 {
   padding-top: 30px;
 }
+ 
+  
+
+
